Fixed text-align center

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -31,7 +31,6 @@ background-color: pink;
   #top10Title {
     text-align: center;
     font-size: 50px;
-    text-align: center;
     color: white;
     width: 70%;
     height: 70%;
